The cursor highlight should update when the mouse drags, too.

Previously it was only updating when the mouse moved and the button was
not held down, now it follows the mouse while dragging too.

Tested manually by enabling the cursor highlight feature and watching
the highlight while clicking and dragging to selecte text.

Bug: 835683
Change-Id: I7ef693cf0f04519850d4cf5d617faca7c15f5763
Reviewed-on: https://chromium-review.googlesource.com/1074171
Reviewed-by: David Tseng <dtseng@chromium.org>
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562517}
Former-commit-id: 41700375de064d45d4ee3760bb53f62ac290ab60